--- a/P007859.opf/meta.yml
+++ b/P007859.opf/meta.yml
@@ -3,5 +3,18 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W4PD506
   title: ཐུབ་ཆོག་བྱིན་རླབས་གཏེར་མཛོད་ཀྱི་རྒྱབ་ཆོས་པདྨ་དཀར་པོ།
-  volume: ''
+  volume:
+    7a8ebbb5236640b2a0867a3860664547:
+      image_group_id: I4PD554
+      title: Volume 1 of thub chog byin rlabs gter mdzod kyi rgyab chos pad+ma dkar
+        po/
+      volume_number: 1
+      total_pages: 1012
   author: ''
+ebook_metadata:
+  title: ཐུབ་ཆོག་བྱིན་རླབས་གཏེར་མཛོད་ཀྱི་རྒྱབ་ཆོས་པདྨ་དཀར་པོ།
+  author: ''
+  sku: P007859
+  cover: cover.jpg
+  layers:
+  - pagination
