--- a/P007859.opf/layers/v001/Pagination.yml
+++ b/P007859.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: cad6033622d1422f98603fd48d03a165
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   fd799ea7455941a0a697aabb5936276c:
