--- a/P007859.opf/meta.yml
+++ b/P007859.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007859
 initial_creation_type: ocr
+created_at: 21/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W4PD506
   title: ཐུབ་ཆོག་བྱིན་རླབས་གཏེར་མཛོད་ཀྱི་རྒྱབ་ཆོས་པདྨ་དཀར་པོ།
@@ -12,10 +14,3 @@ source_metadata:
       volume_number: 1
       total_pages: 1012
       base_file: v001.txt
-ebook_metadata:
-  title: ཐུབ་ཆོག་བྱིན་རླབས་གཏེར་མཛོད་ཀྱི་རྒྱབ་ཆོས་པདྨ་དཀར་པོ།
-  author: ''
-  sku: P007859
-  cover: cover.jpg
-  layers:
-  - pagination
