--- a/P007859.opf/meta.yml
+++ b/P007859.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007859
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:45:29.109049
 source_metadata:
   id: bdr:W4PD506
   title: ཐུབ་ཆོག་བྱིན་རླབས་གཏེར་མཛོད་ཀྱི་རྒྱབ་ཆོས་པདྨ་དཀར་པོ།
@@ -14,3 +14,5 @@ source_metadata:
       volume_number: 1
       total_pages: 1012
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
